@@ -275,7 +275,7 @@ import org.matsim.vehicles.VehicleType;
     resourcesList.add(distributionResource);
 
     //		SolutionScheduler forwardSolutionScheduler = LSPUtils.createForwardSolutionScheduler();
-    // //Ist der "nicht einfache" Scheduler. TODO braucht der keine RessourcenLsite oder ähnliches?
+    // //Ist der "nicht einfache" Scheduler. TODO braucht der keine RessourcenListe oder ähnliches?
     // --> Offenbar ja, weil Null Pointer. argh!
     //		completeLSPBuilder.setSolutionScheduler(forwardSolutionScheduler);
 
@@ -298,7 +298,7 @@ import org.matsim.vehicles.VehicleType;
 
       while (true) {
         Collections.shuffle(linkList, rand);
-        Link pendingToLink = linkList.get(0);
+        Link pendingToLink = linkList.getFirst();
         if ((pendingToLink.getFromNode().getCoord().getX() <= 18000
             && pendingToLink.getFromNode().getCoord().getY() <= 4000
             && pendingToLink.getFromNode().getCoord().getX() >= 14000
@@ -312,7 +312,7 @@ import org.matsim.vehicles.VehicleType;
 
       while (true) {
         Collections.shuffle(linkList, rand);
-        Link pendingFromLink = linkList.get(0);
+        Link pendingFromLink = linkList.getFirst();
         if (pendingFromLink.getFromNode().getCoord().getX() <= 4000
             && pendingFromLink.getFromNode().getCoord().getY() <= 4000
             && pendingFromLink.getToNode().getCoord().getX() <= 4000
